added auth for inputform

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "@next-auth/firebase-adapter": "^2.0.1",
     "@types/video.js": "^7.3.51",
+    "axios": "^0.21.1",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.7.0",
     "hls.js": "^1.4.1-0.canary.9064",
+    "jose": "^4.14.4",
     "jsonschema": "^1.4.1",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
