--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/firebase-adapter": "^2.0.1",
     "@types/video.js": "^7.3.51",
     "axios": "^0.21.1",
+    "dotenv": "^16.3.1",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.7.0",
     "hls.js": "^1.4.1-0.canary.9064",
